--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         <img src="/static/assets/IMG_5490.jpg" alt="Profile Photo">
       </div>
       <h1>Qiyu Chen</h1>
-      <p>Frontend Developer</p>
+      <p>Aspiring IT Professional</p>
       <div class="buttons">
         <a href="{{ url_for('static', filename='resume.pdf') }}" target="_blank">Download CV</a>
 
@@ -80,11 +80,11 @@
         </div>
       </div>
       <div class="project-card">
-        <div class="project-image" style="background-image: url('/static/assets/placeholder.jpg');">
+        <div class="project-image" style="background-image: url('/static/assets/digitalocean-logo-vector.png');">
           <div class="project-hover">
-            <h3>Project Title</h3>
-            <p>Short description for the second project.</p>
-            <a href="#" target="_blank">View on GitHub</a>
+            <h3>Automating Cloud Server Setup with DigitalOcean and Cloud-Init</h3>
+            <p>Automated cloud server deployment on DigitalOcean using doctl and cloud-init for seamless provisioning and configuration.</p>
+            <a href="https://github.com/ICCCIVY/2420-Assignment-1" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
